--- a/Year7-today.html
+++ b/Year7-today.html
@@ -141,9 +141,9 @@
               const schedule = [
                 { date: '2025-04-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQQ8FVErDx0RKJ6t8O0vv0UASAANcyhpgy4ZB0ikEBKcuA' },
                 { date: '2025-04-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTwQQA4lXO_SJYZrFBISFngAQwdC2RMCTh0aMVLtSkmPWg' },
-                { date: '2025-04-16', time: '06:59', url: 'https://1drihGRJXyNV4jNVMaAUFjfKoHtfsGA_ORMtc-iFM' },
-                { date: '2025-04-17', time: '06:59', url: 'httdOxySp9WJNr-bDvlAdKuQ9H8_3-ia-s8RVE_jZ4' },
-                { date: '2025-04-18', time: '06:59', url: 'https://1S3e8ndwQk-AQLHug1VG_7nkah4EWEfmf0' },
+                { date: '2025-04-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTjtR8M15B5SpxznxNSMf-vAYSxRN52QulF2OC3YfmeFHg' },
+                { date: '2025-04-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQg0maS3Tc6RZosz-o62BUXAe7DPXJRz-9wMEZnIejBlsc' },
+                { date: '2025-04-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSM6jG0LkF0RrqVamfmM_UJAbBgrrhZk7TstGqCm7gqi_Q' },
                 { date: '2025-04-19', time: '06:59', url: 'https://1EJGc7oASHJarrlkA8hd-lBbmPBswU' },
                 { date: '2025-04-20', time: '06:59', url: 'https://1drvTcADxKCXUDGNE' },
                 { date: '2025-04-21', time: '06:59', url: 'https://1drMgccZhT2F48h2A' },
