--- a/year8-today.html
+++ b/year8-today.html
@@ -141,9 +141,9 @@
               const schedule = [
                 { date: '2025-04-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTSshSnift1Ro63toLtbUm0AS-2ow8M1YQ6euRjAaZxepo' },
                 { date: '2025-04-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQP83k6QisrQr6BZFiM0ziXAR2kLgashNji9QdpC6BMoBk' },
-                { date: '2025-04-16', time: '06:59', url: 'https://1drihGRJXyNV4jNVMaAUFjfKoHtfsGA_ORMtc-iFM' },
-                { date: '2025-04-17', time: '06:59', url: 'httdOxySp9WJNr-bDvlAdKuQ9H8_3-ia-s8RVE_jZ4' },
-                { date: '2025-04-18', time: '06:59', url: 'https://1S3e8ndwQk-AQLHug1VG_7nkah4EWEfmf0' },
+                { date: '2025-04-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTpOxeKXXitSboivWqQUjIpAQiV3eBDy3_Xf56mgfaZ6_c' },
+                { date: '2025-04-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTWr0eowj9sT4WCWTRziyQgAQgh4POXKTd9oxlWDxQmzJs' },
+                { date: '2025-04-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQciMQArZBlS6_gZ1tXwt-FAYBU8_QKSKGBtO04othB5D0' },
                 { date: '2025-04-19', time: '06:59', url: 'https://1EJGc7oASHJarrlkA8hd-lBbmPBswU' },
                 { date: '2025-04-20', time: '06:59', url: 'https://1drvTcADxKCXUDGNE' },
                 { date: '2025-04-21', time: '06:59', url: 'https://1drMgccZhT2F48h2A' },
