--- a/Year7-today.html
+++ b/Year7-today.html
@@ -144,10 +144,10 @@
                 { date: '2025-04-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTjtR8M15B5SpxznxNSMf-vAYSxRN52QulF2OC3YfmeFHg' },
                 { date: '2025-04-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQg0maS3Tc6RZosz-o62BUXAe7DPXJRz-9wMEZnIejBlsc' },
                 { date: '2025-04-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSM6jG0LkF0RrqVamfmM_UJAbBgrrhZk7TstGqCm7gqi_Q' },
-                { date: '2025-04-19', time: '06:59', url: 'https://1EJGc7oASHJarrlkA8hd-lBbmPBswU' },
-                { date: '2025-04-20', time: '06:59', url: 'https://1drvTcADxKCXUDGNE' },
-                { date: '2025-04-21', time: '06:59', url: 'https://1drMgccZhT2F48h2A' },
-                { date: '2025-04-22', time: '06:59', url: 'https://1dVmh9oyD8ja7jY' },
+                { date: '2025-04-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSR5TgDdyQ_RYC_IbXsb6zsAW3fEPAQTX1IQu-wROjYgRk' },
+                { date: '2025-04-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTR6PnDKeAyTrCdSS4vO6lGAc2kVnVxJH0w7ZZIiqTCmes' },
+                { date: '2025-04-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTKIuroqJc2QpsY9z74wAD3AQCw66NDFzpbLceEkMJP5hM' },
+                { date: '2025-04-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTdAxQaJWnxTqg4PJtp4tuHAf-aORALECO_IyiuhzVP8Vs' },
                 { date: '2025-04-23', time: '06:59', url: 'https://1dVdtYy63Y' },
                 { date: '2025-04-24', time: '06:59', url: 'https://1drv.ms/p/cuA' },
                 { date: '2025-04-25', time: '06:59', url: 'h185b290/IQTU1d43zFuMTKT8xqCiEYZ5AWdZoKlNGQ6uLOqbRnfxGFI' },
