--- a/year8-today.html
+++ b/year8-today.html
@@ -144,15 +144,15 @@
                 { date: '2025-04-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTpOxeKXXitSboivWqQUjIpAQiV3eBDy3_Xf56mgfaZ6_c' },
                 { date: '2025-04-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTWr0eowj9sT4WCWTRziyQgAQgh4POXKTd9oxlWDxQmzJs' },
                 { date: '2025-04-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQciMQArZBlS6_gZ1tXwt-FAYBU8_QKSKGBtO04othB5D0' },
-                { date: '2025-04-19', time: '06:59', url: 'https://1EJGc7oASHJarrlkA8hd-lBbmPBswU' },
-                { date: '2025-04-20', time: '06:59', url: 'https://1drvTcADxKCXUDGNE' },
-                { date: '2025-04-21', time: '06:59', url: 'https://1drMgccZhT2F48h2A' },
-                { date: '2025-04-22', time: '06:59', url: 'https://1dVmh9oyD8ja7jY' },
-                { date: '2025-04-23', time: '06:59', url: 'https://1dVdtYy63Y' },
-                { date: '2025-04-24', time: '06:59', url: 'https://1drv.ms/p/cuA' },
-                { date: '2025-04-25', time: '06:59', url: 'h185b290/IQTU1d43zFuMTKT8xqCiEYZ5AWdZoKlNGQ6uLOqbRnfxGFI' },
-                { date: '2025-04-26', time: '06:59', url: 'https://1drihGRJXyNV4jNVMaAUFjfKoHtfsGA_ORMtc-iFM' },
-                { date: '2025-04-27', time: '06:59', url: 'httdOxySp9WJNr-bDvlAdKuQ9H8_3-ia-s8RVE_jZ4' },
+                { date: '2025-04-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTJx6IwNlvRTYHYce3TwUCVAZVmjIWKNgOdsDHcXpgtjeU' },
+                { date: '2025-04-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSJPWvqU_beTI4MU4j6fYGFAa9kWUU8PWUmhusmOwZsYyU' },
+                { date: '2025-04-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQX8TWyXyWCRK8lf5AxN5GPAbh5pRiLbIGPiY6QmPRJsQY' },
+                { date: '2025-04-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQWMsX3GW3NRruY-qw_eHbcAcVu1ZcGVtHVLqPEgKG815Y' },
+                { date: '2025-04-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSD0Vbq96RXQrefPQxAprhRAWFLG05rXwhCIgxR4HRuyJM' },
+                { date: '2025-04-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSU1kNJz4YBQbZ5m2A9O9kbAeZzD-LatYbbNKii6Yp7ETg' },
+                { date: '2025-04-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTGNTpDWxNWRqbj0ShDD6n8ARXDWxToo_-Lf71RZwfmojg' },
+                { date: '2025-04-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTcixoP1z0SS4uIWN2PXrlHAes06xXnPcnuvKSmkDr9Bck' },
+                { date: '2025-04-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRkoBXW5kuJS4p51rSpsresAfzPqRsd1aoSP6PiXMGkMOQ' },
                 { date: '2025-04-28', time: '06:59', url: 'n/a' },
                 { date: '2025-04-29', time: '06:59', url: 'n/a' },
                 { date: '2025-04-30', time: '06:59', url: 'n/a' },
