--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
             <div class="content">
                 <h1 class="main-header abyssinica-font">Welcome to BigFanofMaths!</h1>
-                <p class="main-paragraph">A free website offering daily maths<br>questions for Year 7 and Year 8 students,<br>with answers provided the same day.<br> New questions at 7am every day!</p>
+                <p class="main-paragraph">A free website offering daily maths starters<br>questions for Year 7 and Year 8 students,<br>with answers provided the same day.<br> New questions at 7am every day!</p>
             </div>
         </div>
         <h2 class="centered-header">Pick a year group to get started!</h2>
